==> vit00lya/grbl-risc-v/src/.legacy/stepper.c <==
#include "grbl.h"
#define DT_SEGMENT (1.0/(ACCELERATION_TICKS_PER_SECOND*60.0)) // min/segment
#define REQ_MM_INCREMENT_SCALAR 1.25
#define RAMP_ACCEL 0
#define RAMP_CRUISE 1
#define RAMP_DECEL 2
#define MAX_AMASS_LEVEL 3
#define AMASS_LEVEL1 (F_CPU/8000) // Over-drives ISR (x2). Defined as F_CPU/(Cutoff frequency in Hz) // Приводит к превышению ISR (x2). Определяется как F_CPU/(Частота среза в Гц)
#define AMASS_LEVEL2 (F_CPU/4000) // Over-drives ISR (x4) // Перегрузка ISR (x4)
#define AMASS_LEVEL3 (F_CPU/2000) // Over-drives ISR (x8) // Перегрузка ISR (x8)

void st_wake_up() 
{
  // Enable stepper drivers. // Включить шаговые драйверы.
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); }
  else { STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT); }

  if (sys.state & (STATE_CYCLE | STATE_HOMING)){
    // Initialize stepper output bits // Инициализировать выходные биты шагового преобразователя
    st.dir_outbits = dir_port_invert_mask; 
    st.step_outbits = step_port_invert_mask;
    
    // Initialize step pulse timing from settings. Here to ensure updating after re-writing.
    // Инициализируйте синхронизацию пошаговых импульсов из настроек. Здесь для обеспечения обновления после перезаписи.
    #ifdef STEP_PULSE_DELAY
      // Set total step pulse time after direction pin set. Ad hoc computation from oscilloscope.
      // Установите общее время импульса шага после установки направляющего контакта. Специальные вычисления с помощью осциллографа.
      st.step_pulse_time = -(((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
      // Set delay between direction pin write and step command.
      // Установите задержку между записью пин-кода направления и командой шага.
      OCR0A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
    #else // Normal operation
      // Set step pulse time. Ad hoc computation from oscilloscope. Uses two's complement.
      // Нормальная работа
      // Установите время пошагового импульса. Специальные вычисления с помощью осциллографа. Используется дополнение two.
      st.step_pulse_time = -(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);
    #endif

    // Enable Stepper Driver Interrupt
    // Включить прерывание шагового драйвера
    TIMSK1 |= (1<<OCIE1A);
  }
}

void st_go_idle() 
{
  // Disable Stepper Driver Interrupt. Allow Stepper Port Reset Interrupt to finish, if active.
  // Отключите прерывание драйвера Stepper. Разрешите завершить прерывание сброса порта Stepper, если оно активно.
  TIMSK1 &= ~(1<<OCIE1A); // Disable Timer1 interrupt // Отключить прерывание по таймеру 1
  TCCR1B = (TCCR1B & ~((1<<CS12) | (1<<CS11))) | (1<<CS10); // Reset clock to no prescaling. // Сброс времени без предварительного масштабирования.
  busy = false;
  
  // Установите драйвер шагового двигателя в состояние ожидания, отключенное или включенное, в зависимости от настроек и обстоятельств.
  // Set stepper driver idle state, disabled or enabled, depending on settings and circumstances.
  bool pin_state = false; // Keep enabled.
  if (((settings.stepper_idle_lock_time != 0xff) || sys_rt_exec_alarm) && sys.state != STATE_HOMING) {
    // Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
    // stop and not drift from residual inertial forces at the end of the last movement.
    // Принудительно остановите шаговый механизм, чтобы зафиксировать оси на определенный промежуток времени, чтобы убедиться, что оси полностью выровнялись
    // остановитесь и не дрейфуйте из-за остаточных сил инерции в конце последнего движения.
    delay_ms(settings.stepper_idle_lock_time);
    pin_state = true; // Override. Disable steppers. // Переопределить. Отключите шаговые двигатели.
  }
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { pin_state = !pin_state; } // Apply pin invert.
  if (pin_state) { STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); }
  else { STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT); }
}

void st_reset()
{
  // Initialize stepper driver idle state.
  // Инициализируйте состояние бездействия шагового драйвера.
  st_go_idle();
  
  // Initialize stepper algorithm variables.
  // Инициализируем переменные шагового алгоритма.
  memset(&prep, 0, sizeof(st_prep_t));
  memset(&st, 0, sizeof(stepper_t));
  st.exec_segment = NULL;
  pl_block = NULL;  // Planner block pointer used by segment buffer // Указатель блока планировщика, используемый буфером сегмента
  segment_buffer_tail = 0;
  segment_buffer_head = 0; // empty = tail
  segment_next_head = 1;
  busy = false;
  
  st_generate_step_dir_invert_masks();
      
  // Initialize step and direction port pins. // Инициализируйте выводы порта шага и направления.
  STEP_PORT = (STEP_PORT & ~STEP_MASK) | step_port_invert_mask;
  DIRECTION_PORT = (DIRECTION_PORT & ~DIRECTION_MASK) | dir_port_invert_mask;
}

void stepper_init()
{
  // Configure step and direction interface pins // Настройка выводов интерфейса шага и направления
  STEP_DDR |= STEP_MASK;
  STEPPERS_DISABLE_DDR |= 1<<STEPPERS_DISABLE_BIT;
  DIRECTION_DDR |= DIRECTION_MASK;

  // Configure Timer 1: Stepper Driver Interrupt // Настройка таймера 1: Прерывание работы шагового драйвера
  TCCR1B &= ~(1<<WGM13); // waveform generation = 0100 = CTC
  TCCR1B |=  (1<<WGM12);
  TCCR1A &= ~((1<<WGM11) | (1<<WGM10)); 
  TCCR1A &= ~((1<<COM1A1) | (1<<COM1A0) | (1<<COM1B1) | (1<<COM1B0)); // Disconnect OC1 output // Отсоединить выход OC1
  // TCCR1B = (TCCR1B & ~((1<<CS12) | (1<<CS11))) | (1<<CS10); // Set in st_go_idle().
  // TIMSK1 &= ~(1<<OCIE1A);  // Set in st_go_idle().
  
  // Configure Timer 0: Stepper Port Reset Interrupt // Настройка таймера 0: Прерывание сброса шагового порта
  TIMSK0 &= ~((1<<OCIE0B) | (1<<OCIE0A) | (1<<TOIE0)); // Disconnect OC0 outputs and OVF interrupt. // Отключите выходы OC0 и прерывание OVF.
  TCCR0A = 0; // Normal operation // Нормальная работа
  TCCR0B = 0; // Disable Timer0 until needed // Отключите таймер0 до тех пор, пока это не потребуется
  TIMSK0 |= (1<<TOIE0); // Enable Timer0 overflow interrupt // Включить прерывание переполнения таймера 0
  #ifdef STEP_PULSE_DELAY
    TIMSK0 |= (1<<OCIE0A); // Enable Timer0 Compare Match A interrupt // Включить Таймер0 Для сравнения с прерыванием
  #endif
}
